Add support for RGB color format in {color} command, Fix bug involving client receiving multiple messages at the same time, Remove leftover comments, Add README.md to .csproj build

--- a/Quicksilver.csproj
+++ b/Quicksilver.csproj
@@ -12,6 +12,9 @@
     <Content Include="Glyphs/*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
